# Edward

./: .gitignore  README.md  astar.py  goinside.py  local_data.py  main.py  premiums_alt.py  premiums_return.py  pyproject.toml  pyvenv.cfg  routes.py  settings.py  ships.py  ships_set_sail.py  subroutines.py  weather_hazards.py
assets/maps/: newmap10aug25_Tile Layer 2.csv  newmap10spritesupd.json  newmap10spritesupd_Tile Layer 1.csv  newmap26aug25.csv  newmap6Sep2025.tmj  newmap6Sep2025_Tile Layer 2.csv  newmap6Sep2025b.tmx  spritesheet.json
docs/: project_structure.md
docs/not required for compilation/: natlanticmap8.tiled-session
docs/pseudocode/: Edward Lloyd's Coffeehouse Project 1 Pseudocode.docx  Pseudocode for Premiums_alt.docx
not required for compilation/: Pseudocode for ships_set_sail and associated subroutines.docx  newmap10aug25_Tile Layer 1.csv  newmap10spritesupd..tmx  newmap6Sep2025.tmx
src/: __init__.py
src/core/: __init__.py  main.py
src/data/: __init__.py  local_data.py
src/edward/: __main__.py
src/edward/adapters/io/: tiles_loader.py
src/edward/adapters/mapping/: spritesheet.py
src/edward/app/: runtime.py
src/edward/experiments/: hello.py  mytext.py
src/edward/infra/: config.py
src/models/: __init__.py  subroutines.py
src/ui/menus/: __init__.py  settings.py
src/ui/screens/: __init__.py  goinside.py  ports.py  premiums.py  premiums_alt.py  premiums_return.py  routes.py  ships.py  ships_set_sail.py  underwriter_preferences.py  weather_hazards.py
src/utils/: __init__.py  pathfinding.py  tiles.py
tests/: __init__.py
(+4 files in other folders)
