[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edward"
version = "0.1.0"
description = "Edward Lloyd's Coffeehouse project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
edward = "edward.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]